# ly2541

./: .gitignore  Makefile  Makefile.template  README.md  apprun.sh  autofile.sh  buildarm.sh  buildtest.sh  buildx86.sh  buildxilinx.sh  main.c  make.sh
bash/: buildx86.sh  buildxilinx.sh
common/hal/: serial.c
doc/: README.md
include/: common.h  compiler_gcc.h  crc.h  fpga_ctrl.h  period_feedback.h  post.h  res_mgr.h  rngbuf.h  serial.h  serial_logic.h  tcp_logic.h  types.h  usr_dma.h  usr_eth.h  usr_file.h  usr_i2c.h  usr_net_cmd.h  usr_serial_cmd.h  usr_socket.h  usr_thread.h  usr_timer.h  version.h  zlog.h
lib/: crc16.c  crc8.c  rngbuf.c  serial.c  usr_socket.c  usr_thread.c
scripts/: link.ld
src/: fpga_ctrl.c  main.c  usr_dma.c  usr_net_cmd.c  version.c
src/app/: main.c  period_feedback.c  post.c  res_mgr.c  serial_logic.c  tcp_logic.c  usr_net_cmd.c  usr_serial_cmd.c  version.c
src/common/hal/: crc16.c  crc8.c  fpga_ctrl.c  rngbuf.c  serial.c  usr_eth.c  usr_file.c  usr_i2c.c  usr_socket.c  usr_thread.c  usr_timer.c
test/: CMakeLists.txt  test_crc8.cpp  test_fpga_ctrl.cpp  test_rngbuf.cpp  test_usr_dma.cpp  x86_64-linux-gnu.cmake
